<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trickle</string>
    <string name="drink_counter_desc">Drink Counter</string>
    <string name="hello_world">Hello World</string>
    <string name="done_drinking">Finished Drinking</string>
    <string name="resourcebutton">Resources</string>

    <!-- Shared Strings for Questions -->
    <string name="na">N/A</string>
    <string name="finish">Save</string>
    <string name="other_label">Other (Specify)</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Strings for Drink Counter -->
    <string name="remove_drink">Remove Last Drink</string>
    <string name="add_desc">Add another Drink</string>

    
    
    <!-- Strings for Location Question -->
    <string name="loc_prompt">I drank primarily at:</string>
    <string name="bar_label">A Bar</string>
    <string name="rest_label">A Restaurant</string>
    <string name="home_label">Home</string>
    <string name="friend_label">Other Residence</string>
    <string name="school_label">School or Work</string>
    <string name="frat_label">A Club, Fraternity, or Sorority Event</string>
    <string name="sport_label">A Public Event(sports, party, concert, etc.)</string>
    <string name="other_hint">Enter where you went drinking</string>

    <!-- Strings for Company Quesiton -->
    <string name="company">I went drinking with:</string>
    <string name="myself_radio">Myself/Alone</string>
    <string name="family_radio">Family Members or Relatives</string>
    <string name="male_radio">Male Friends Only</string>
    <string name="female_radio">Female Friends Only</string>
    <string name="mixed_radio">Both Male and Female Friends</string>
    <string name="so_radio">Significant Other</string>
    <string name="strangers_radio">Strangers</string>
    <string name="other_company_hint">Enter who you went drinking with</string>

    <!-- Strings for Objective Question -->
    <string name="objective">I went drinking to:</string>
    <string name="relax_radio">Relax</string>
    <string name="celebrate_radio">Celebrate an occasion</string>
    <string name="social_obj_radio">To be social</string>
    <string name="forget_radio">To forget about my problems</string>
    <string name="other_objective_hint">Enter why you went drinking</string>

    <!-- Strings for Drink Assessment -->
    <string name="number_drinks">The # of drinks I think I had last Night:</string>
    <string name="excess_drinks">I had too many drinks last night</string>
    <string name="excess_left">Disagree</string>
    <string name="excess_right">Agree</string>

    <!-- Strings for Effects from last night Might get rid of this -->
    <string name="effects">Yesterday, I felt:</string>
    <string name="forgot">Forgot or escaped from my responsibilities and problems.</string>

    <!-- Strings for Wordle Prompt -->
    <string name="wordle_prompt">Yesterday, I felt:</string>
    <string name="happy">Happy</string>
    <string name="productive">Productive</string>
    <string name="lazy">Lazy</string>
    <string name="foggy">Foggy</string>
    <string name="sick">Sick</string>
    <string name="strong">Strong</string>
    <string name="excited">Excited</string>
    <string name="angry">Angry</string>
    <string name="unhappy">Unhappy</string>
    <string name="sad">Sad</string>
    <string name="defeated">Defeated</string>
    <string name="social">Social</string>
    <string name="fun">Fun</string>
    <string name="energetic">Energetic</string>
    <string name="healthy">Healthy</string>
    <string name="lonely">Lonely</string>
    <string name="successful">Successful</string>
    <string name="apathetic">Apathetic</string>
    <string name="optimistic">Optimistic</string>
    <string name="loved">Loved</string>
    <string name="embarrassed">Embarrassed</string>
    <string name="sloppy">Sloppy</string>
    <string name="out_control">Out of control</string>
    <string name="relaxed">Relaxed</string>
    <string name="uncomfortable">Uncomfortable</string>
    <string name="adventurous">Adventurous</string>
    <string name="stressed">Stressed</string>
    <string name="anxious">Anxious</string>
    <string name="depressed">Depressed</string>
    <string name="humorous">Humorous</string>
    <string name="regretful">Regretful</string>
    <string name="hopeful">Hopeful</string>
    <string name="outgoing">Outgoing</string>
    <string name="busy">Busy</string>
    <string name="hungover">Hungover</string>
    <string name="tired">Tired</string>

    <!-- Strings for exercise questions -->
    <string name="exercise_prompt">I exercised today.</string>
    <string name="exercise_quality">The quality of my exercise was:</string>
    <string name="excer_left">Pitiful</string>
    <string name="excer_right">Excellent</string>

    <!-- Strings for productivity questions -->
    <string name="productive_prompt">My productivity level was:</string>
    <string name="prod_left">Poor</string>
    <string name="prod_right">Excellent</string>
    <string name="perform_prompt">How well I think I am doing in school right now:</string>
    <string name="perf_left">F</string>
    <string name="perf_right">A+</string>
    <string name="stressed_prompt">How stressed I feel today:</string>
    <string name="stress_left">Carefree</string>
    <string name="stress_right">Overwhelmed</string>
    
    <!-- Strings for DrinkCalendar -->
	<string name="color_click">Click on a colored date for more information.</string>
	    <!-- Strings for New Ones -->
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="drink_image">Drink Image</string>
    <string name="okay">OKAY</string> 
   <string name="morning">MORNING</string> 
   <string name="evening">EVENING</string> 
   <string name="after">AFTER</string> 

    <!-- after_drinking_durvey -->
    <string name="type_drink_prompt">What did you drink last night?</string>
    <string name="beer_checkbox">Beer</string>
    <string name="wine_checkbox">Wine</string>
    <string name="liquor_checkbox">Liquor</string>
    
    
    <string name="vomit_prompt">Did you vomit last night?</string>
    
    <string name="recall_prompt">How much of last night\'s events do you recall?</string>
    <string name="recall_yes">Everything</string>
    <string name="recall_no">Nothing</string>
    
    <string name="regret_prompt">How regretful are you about events from last night?</string>
    <string name="regret_yes">Very</string>
    <string name="regret_no">Not at all</string>
    
    <string name="symptoms_prompt">Do you feel any of the following symptoms?</string>
    <string name="symptoms_fatigue">Fatigue</string>
    <string name="symptoms_nausea">Nausea</string>
    <string name="symptoms_headache">Headache</string>
    <string name="symptoms_vomit">Vomitting</string>
    
    <string name="save">Save</string>
    
    <!-- Nav Drawer Menu Items -->

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Help</item>
        <item>Settings</item>
        <item>Kiip Rewards</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_trickle</item>
        <item>@drawable/ic_help</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_kiip2</item>
    </array>
        <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="nothing"></string>
	
</resources>