<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc_prompt"
        android:background="#7b9aad"
		android:textColor ="#FFFFFF"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:orientation="vertical"
        android:weightSum="10" >

        <RadioGroup
            android:id="@+id/location_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:weightSum="8" >

            <RadioButton
                android:id="@+id/bar_radio"
                android:button="@drawable/bar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bar_label"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/restaurant_radio"
                android:button="@drawable/restaurant_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rest_label"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/myhome_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/myhome_button"
                android:text="@string/home_label"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/friend_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/friend_button"
                android:text="@string/friend_label"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/school_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/school_button"
                android:text="@string/school_label"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/frat_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/frat_button"
                android:text="@string/frat_label"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/sport_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/sport_button"
                android:text="@string/sport_label"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/other_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other_label"
                android:textSize="20sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/other_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:ems="6"
            android:gravity="center"
            android:hint="@string/other_hint"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/location_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/finish" />
    </LinearLayout>

</LinearLayout>