<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >	
    <ScrollView 
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        
	        <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/number_drinks"
		        android:background="#0099CC"
				android:textColor ="#FFFFFF"
		        android:textSize="30sp"
		        android:padding="10dp" />
		    <EditText
	            android:id="@+id/number_drinks"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:ems="6"
	            android:gravity="center"
	            android:inputType="number"
	            android:textSize="20sp" 
	            android:layout_marginTop="30dp"
	            />
	   
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/excess_drinks"
		        android:background="#0099CC"
				android:textColor ="#FFFFFF"
		        android:textSize="30sp"
		        android:padding="10dp"
		        android:layout_marginTop="50dp" />
            <SeekBar
   				android:id="@+id/excess_drinks"
   				android:layout_width="match_parent"
   				android:layout_height="wrap_content"
   				android:layout_marginTop="50dp"/>
            
            <Button
	            android:id="@+id/drink_assess_finish"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginTop="40dp"
	            android:text="@string/submit" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
